remove dependences local package

--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "babel-preset-flow": "6.23.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
-    "react-test-renderer": "16.8.3",
-    "@techfox-community/base-structure": "file:packages/base-structure"
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "techfox-react-native"
